--- a/ht/package.json
+++ b/ht/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
+    "@angular/common": "^5.0.3",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
+    "fs": "0.0.1-security",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
